--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,54 @@
+absl-py==0.8.1
+asgiref==3.2.2
+asn1crypto==1.0.1
+astor==0.8.0
+astroid==2.3.1
+attrs==19.2.0
+autobahn==19.10.1
+Automat==0.7.0
+autopep8==1.4.4
+cffi==1.12.3
+channels==2.3.0
+constantly==15.1.0
+cryptography==2.7
+daphne==2.3.0
 Django==2.2.6
+gast==0.2.2
+google-pasta==0.1.7
+grpcio==1.24.1
+h5py==2.10.0
+hyperlink==19.0.0
+idna==2.8
+imutils==0.5.3
+incremental==17.5.0
+isort==4.3.21
+Keras==2.0.4
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+lazy-object-proxy==1.4.2
+Markdown==3.1.1
+mccabe==0.6.1
+numpy==1.17.2
+opencv-python==4.1.1.26
+opt-einsum==3.1.0
+protobuf==3.10.0
+pycodestyle==2.5.0
+pycparser==2.19
+PyHamcrest==1.9.0
+pylint==2.4.2
 pytz==2019.3
+PyYAML==5.1.2
+scipy==1.3.1
+six==1.12.0
 sqlparse==0.3.0
+tensorboard==1.15.0
+tensorflow==1.15.0rc2
+tensorflow-estimator==1.15.1
+termcolor==1.1.0
+Theano==1.0.4
+Twisted==19.7.0
+txaio==18.8.1
+typed-ast==1.4.0
+Werkzeug==0.16.0
+wrapt==1.11.2
+zope.interface==4.6.0
